Fixed issue with blurry sprites on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@ body {
 canvas {
 	display: block;
 	overflow: hidden;
+	image-rendering: -moz-crisp-edges;    
+  	image-rendering: -webkit-crisp-edges;
+  	image-rendering: pixelated; 
 }
 
 /*
@@ -98,7 +101,6 @@ TITLE SCREEN STYLING */
 	top: 40px;
 	left: 35px;
 	bottom: 0;
-	width: 320px;
 	height: 60px;
 	font-size: 0.85em;
 	line-height: 1.4em;
@@ -184,6 +186,7 @@ GAME OVER SCREEN STYLING */
 	background-size: cover;
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
+	box-shadow: 0 10px 50px black;
 	transition: all 0.3s ease;
 }
 
@@ -341,6 +344,13 @@ LANDSCAPE STYLING FOR PHONE & TABLET */
 			transition: all 0.3s ease;
 		}
 	}
+
+	@media screen and (max-width: 853px) {
+		.instructions {
+			left: 0;
+			right: 90px;
+		}		
+	}
 }
 
 /*
@@ -359,7 +369,7 @@ PORTRAIT STYLING FOR PHONE & TABLET */
 	}
 }
 
-@media screen and (orientation: portrait) and (max-width: 480px) {
+@media screen and (orientation: portrait) and (max-width: 720px) {
 
 	.title-container {
 		width: 100%;
@@ -398,6 +408,7 @@ PORTRAIT STYLING FOR PHONE & TABLET */
 	}
 }
 
+
 /*
 ___________________________________________________
 STYLING FOR DESKTOP */
@@ -423,7 +434,9 @@ STYLING FOR DESKTOP */
 		font-size: 1.2em;
 		background-size: 600px;
 	}
+}
 
+@media screen and (min-width: 720px) and (min-height: 480px) {
 	.title-container {
 		width: 700px;
 		height: 600px;
@@ -464,8 +477,10 @@ STYLING FOR DESKTOP */
 	}
 }
 
+
 @media screen and (min-width: 1367px) {
-		.control-pad {
+	.control-pad {
 		visibility: hidden;
-		}
+	}
 }
+
